--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
     // LiveData
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
-    implementation("androidx.arch.lifecycle:extensions:1.1.0")
+   // implementation("androidx.arch.lifecycle:extensions:1.1.0")
 }
